// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`non-pretty: pretty/selects-1.sql 1`] = `"SELECT 1"`;

exports[`non-pretty: pretty/selects-2.sql 1`] = `"SELECT 'abc'::text"`;

exports[`non-pretty: pretty/selects-3.sql 1`] = `"SELECT now() AT TIME ZONE 'UTC'"`;

exports[`non-pretty: pretty/selects-4.sql 1`] = `"SELECT 1, 2"`;

exports[`non-pretty: pretty/selects-5.sql 1`] = `"SELECT id, name, email FROM users"`;

exports[`non-pretty: pretty/selects-6.sql 1`] = `"SELECT DISTINCT id FROM users"`;

exports[`non-pretty: pretty/selects-7.sql 1`] = `"SELECT DISTINCT id, name FROM users"`;

exports[`non-pretty: pretty/selects-8.sql 1`] = `"SELECT id, upper(name) AS name_upper, created_at + '1 day'::interval AS expires_at FROM accounts"`;

exports[`non-pretty: pretty/selects-9.sql 1`] = `"SELECT (SELECT max(score) FROM results)"`;

exports[`non-pretty: pretty/selects-10.sql 1`] = `"SELECT count(*) OVER (), u.id FROM users AS u"`;

exports[`non-pretty: pretty/selects-11.sql 1`] = `"SELECT name FROM customers UNION ALL SELECT name FROM suppliers ORDER BY name"`;

exports[`non-pretty: pretty/selects-12.sql 1`] = `"SELECT u.id, u.name, u.email, p.title FROM users AS u JOIN profiles AS p ON u.id = p.user_id LEFT JOIN orders AS o ON u.id = o.user_id RIGHT JOIN addresses AS a ON u.id = a.user_id WHERE u.active = true"`;

exports[`non-pretty: pretty/selects-13.sql 1`] = `"SELECT id, name FROM users WHERE id IN (SELECT user_id FROM orders WHERE total > 100)"`;

exports[`non-pretty: pretty/selects-14.sql 1`] = `"SELECT id, name, email FROM users WHERE active = true"`;

exports[`non-pretty: pretty/selects-15.sql 1`] = `"SELECT u.id, u.name, u.email, p.title FROM users AS u JOIN profiles AS p ON u.id = p.user_id WHERE u.active = true AND u.created_at > '2023-01-01' GROUP BY u.id, u.name, u.email, p.title HAVING count(*) > 1 ORDER BY u.created_at DESC, u.name ASC LIMIT 10 OFFSET 5"`;

exports[`pretty: pretty/selects-1.sql 1`] = `"SELECT 1"`;

exports[`pretty: pretty/selects-2.sql 1`] = `"SELECT 'abc'::text"`;

exports[`pretty: pretty/selects-3.sql 1`] = `"SELECT now() AT TIME ZONE 'UTC'"`;

exports[`pretty: pretty/selects-4.sql 1`] = `
"SELECT
  1,
  2"
`;

exports[`pretty: pretty/selects-5.sql 1`] = `
"SELECT
  id,
  name,
  email
FROM users"
`;

exports[`pretty: pretty/selects-6.sql 1`] = `
"SELECT DISTINCT id
FROM users"
`;

exports[`pretty: pretty/selects-7.sql 1`] = `
"SELECT DISTINCT
  id,
  name
FROM users"
`;

exports[`pretty: pretty/selects-8.sql 1`] = `
"SELECT
  id,
  upper(name) AS name_upper,
  created_at + '1 day'::interval AS expires_at
FROM accounts"
`;

exports[`pretty: pretty/selects-9.sql 1`] = `
"SELECT
  (SELECT max(score)
  FROM results)"
`;

exports[`pretty: pretty/selects-10.sql 1`] = `
"SELECT
  count(*) OVER (),
  u.id
FROM users AS u"
`;

exports[`pretty: pretty/selects-11.sql 1`] = `
"SELECT name
FROM customers
UNION
ALL
SELECT name
FROM suppliers
ORDER BY
  name"
`;

exports[`pretty: pretty/selects-12.sql 1`] = `
"SELECT
  u.id,
  u.name,
  u.email,
  p.title
FROM users AS u
JOIN profiles AS p ON u.id = p.user_id
LEFT JOIN orders AS o ON u.id = o.user_id
RIGHT JOIN addresses AS a ON u.id = a.user_id
WHERE
  u.active = true"
`;

exports[`pretty: pretty/selects-13.sql 1`] = `
"SELECT
  id,
  name
FROM users
WHERE
  id IN (SELECT user_id
FROM orders
WHERE
  total > 100)"
`;

exports[`pretty: pretty/selects-14.sql 1`] = `
"SELECT
  id,
  name,
  email
FROM users
WHERE
  active = true"
`;

exports[`pretty: pretty/selects-15.sql 1`] = `
"SELECT
  u.id,
  u.name,
  u.email,
  p.title
FROM users AS u
JOIN profiles AS p ON u.id = p.user_id
WHERE
  u.active = true
  AND u.created_at > '2023-01-01'
GROUP BY
  u.id,
  u.name,
  u.email,
  p.title
HAVING
  count(*) > 1
ORDER BY
  u.created_at DESC,
  u.name ASC
LIMIT 10
OFFSET 5"
`;
